--- a/DXMauiApp1/App.xaml
+++ b/DXMauiApp1/App.xaml
@@ -2,38 +2,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:windows="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.WindowsSpecific;assembly=Microsoft.Maui.Controls"
              xmlns:local="clr-namespace:DXMauiApp1"
-             x:Class= "DXMauiApp1.App"
-             windows:Application.ImageDirectory="Assets">
+             x:Class= "DXMauiApp1.App">
     <Application.Resources>
         <ResourceDictionary>
-            <Color x:Key="Primary">#512BD4</Color>
-            <Color x:Key="NormalText">#55575c</Color>
-            <Color x:Key="NormalHeaderText">#55575c</Color>
-            <Color x:Key="NormalLightText">#959aa0</Color>
-            <Color x:Key="TitleTextColor">White</Color>
-            <Color x:Key="NormalBackgroundColor">White</Color>
 
+            <Style TargetType="Button">
+                <Setter Property="BackgroundColor" Value="Black" />
+                <Setter Property="CornerRadius" Value="0" />
+                <Setter Property="FontSize" Value="17" />
+                <Setter Property="TextColor" Value="White" />
+            </Style>
+            
             <Style TargetType="Label">
                 <Setter Property="FontSize" Value="17" />
             </Style>
             
-            <Style TargetType="NavigationPage">
-                <Setter Property="BarBackgroundColor" Value="{StaticResource Primary}"/>
-                <Setter Property="BarTextColor" Value="White"/>
-            </Style>
-            <Style x:Key="PrimaryButton" TargetType="Button">
-                <Setter Property="BackgroundColor" Value="{StaticResource Primary}"/>
-                <Setter Property="TextColor" Value="White"/>
-            </Style>
-            <Style x:Key="ShellStyle" TargetType="Element">
-                <Setter Property="Shell.BackgroundColor" Value="{StaticResource Primary}" />
-                <Setter Property="Shell.TitleColor" Value="{StaticResource TitleTextColor}" />
-                <Setter Property="Shell.ForegroundColor" Value="{StaticResource TitleTextColor}" />
-                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource NormalBackgroundColor}" />
-                <Setter Property="Shell.TabBarForegroundColor" Value="{StaticResource Primary}" />
-                <Setter Property="Shell.TabBarTitleColor" Value="{StaticResource Primary}" />
-                <Setter Property="Shell.TabBarUnselectedColor" Value="{StaticResource NormalText}" />
-            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
