--- a/DXMauiApp1/App.xaml
+++ b/DXMauiApp1/App.xaml
@@ -7,7 +7,7 @@
         <ResourceDictionary>
 
             <Style TargetType="Button">
-                <Setter Property="BackgroundColor" Value="Black" />
+                <Setter Property="BackgroundColor" Value="Navy" />
                 <Setter Property="CornerRadius" Value="0" />
                 <Setter Property="FontSize" Value="17" />
                 <Setter Property="TextColor" Value="White" />
