--- a/DXMauiApp1/Pages/Receipt/ReceiptMakeupPage.xaml
+++ b/DXMauiApp1/Pages/Receipt/ReceiptMakeupPage.xaml
@@ -5,25 +5,25 @@
              x:Class="DXMauiApp1.Pages.ReceiptMakeupPage"
              Title="快递签收">
     <ContentPage.Content>
+        <ScrollView>
+            <VerticalStackLayout
+                Padding="24"
+                Spacing="24">
 
-        <VerticalStackLayout
-            Padding="24"
-            Spacing="24">
-
-            <Grid
+                <Grid
                     BackgroundColor="WhiteSmoke"
                     Margin="-24,-24,-24,0"
                     Padding="24">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
 
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="56" />
-                </Grid.RowDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="56" />
+                    </Grid.RowDefinitions>
 
-                <dxe:TextEdit 
+                    <dxe:TextEdit 
                         x:Name="TextEditWaybillNumber"
                         BackgroundColor="White"
                         BoxPadding="18,16"
@@ -44,7 +44,7 @@
                         TextChanged="TextEditWaybillNumber_TextChanged"
                         TextFontSize="17" />
 
-                <Button 
+                    <Button 
                         x:Name="ButtonSearch"
                         Clicked="ButtonSearch_Clicked"
                         Grid.Column="1"
@@ -52,112 +52,164 @@
                         HeightRequest="56"
                         Text="查询" 
                         WidthRequest="75" />
-            </Grid>
+                </Grid>
 
-            <dxe:NumericEdit 
-                x:Name="NumericEditLength"
-                AllowNullValue="True"
-                BoxPadding="18,16"
-                BorderThickness="0.9"
-                ClearIconVisibility="Never"
-                CornerRadius="0"
-                DisabledBorderThickness="0.9"
-                ErrorText=" "
-                FocusedBorderThickness="0.9"
-                HelpText=" "
-                IsErrorIconVisible="False"
-                LabelFontSize="17"
-                LabelText="长 CM"
-                Margin="0,-11,0,-16"
-                MaxDecimalDigitCount="0"
-                TextFontSize="17"
-                TextHorizontalAlignment="Start"
-                ValueChanged="NumericEditLength_ValueChanged" />
+                <Grid
+                    ColumnSpacing="24">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
 
-            <dxe:NumericEdit 
-                x:Name="NumericEditWidth"
-                AllowNullValue="True"
-                BoxPadding="18,16"
-                BorderThickness="0.9"
-                ClearIconVisibility="Never"
-                CornerRadius="0"
-                DisabledBorderThickness="0.9"
-                ErrorText=" "
-                FocusedBorderThickness="0.9"
-                HelpText=" "
-                IsErrorIconVisible="False"
-                LabelFontSize="17"
-                LabelText="宽 CM"
-                Margin="0,-11,0,-16"
-                MaxDecimalDigitCount="0"
-                TextFontSize="17"
-                TextHorizontalAlignment="Start"
-                ValueChanged="NumericEditWidth_ValueChanged" />
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="56" />
+                    </Grid.RowDefinitions>
 
-            <dxe:NumericEdit 
-                x:Name="NumericEditHeight"
-                AllowNullValue="True"
-                BoxPadding="18,16"
-                BorderThickness="0.9"
-                ClearIconVisibility="Never"
-                CornerRadius="0"
-                DisabledBorderThickness="0.9"
-                ErrorText=" "
-                FocusedBorderThickness="0.9"
-                HelpText=" "
-                IsErrorIconVisible="False"
-                LabelFontSize="17"
-                LabelText="高 CM"
-                Margin="0,-11,0,-16"
-                MaxDecimalDigitCount="0"
-                TextFontSize="17"
-                TextHorizontalAlignment="Start"
-                ValueChanged="NumericEditHeight_ValueChanged" />
+                    <dxe:NumericEdit 
+                        x:Name="NumericEditLength"
+                        AllowNullValue="True"
+                        BoxPadding="18,16"
+                        BorderThickness="0.9"
+                        ClearIconVisibility="Never"
+                        CornerRadius="0"
+                        DisabledBorderThickness="0.9"
+                        ErrorText=" "
+                        FocusedBorderThickness="0.9"
+                        Grid.Column="0"
+                        Grid.Row="0"
+                        HelpText=" "
+                        IsErrorIconVisible="False"
+                        LabelFontSize="17"
+                        LabelText="长 CM"
+                        Margin="0,-11,0,-16"
+                        MaxDecimalDigitCount="0"
+                        TextFontSize="17"
+                        TextHorizontalAlignment="Start"
+                        ValueChanged="NumericEditLength_ValueChanged" />
 
-            <dxe:NumericEdit 
-                x:Name="NumericEditWeight"
-                AllowNullValue="True"
-                BoxPadding="18,16"
-                BorderThickness="0.9"
-                ClearIconVisibility="Never"
-                CornerRadius="0"
-                DisabledBorderThickness="0.9"
-                ErrorText=" "
-                FocusedBorderThickness="0.9"
-                HelpText=" "
-                IsErrorIconVisible="False"
-                LabelFontSize="17"
-                LabelText="重量 KG"
-                Margin="0,-11,0,-16"
-                MaxDecimalDigitCount="2"
-                TextFontSize="17"
-                TextHorizontalAlignment="Start"
-                ValueChanged="NumericEditWeight_ValueChanged" />
+                    <dxe:NumericEdit 
+                        x:Name="NumericEditWidth"
+                        AllowNullValue="True"
+                        BoxPadding="18,16"
+                        BorderThickness="0.9"
+                        ClearIconVisibility="Never"
+                        CornerRadius="0"
+                        DisabledBorderThickness="0.9"
+                        ErrorText=" "
+                        FocusedBorderThickness="0.9"
+                        Grid.Column="1"
+                        Grid.Row="0"
+                        HelpText=" "
+                        IsErrorIconVisible="False"
+                        LabelFontSize="17"
+                        LabelText="宽 CM"
+                        Margin="0,-11,0,-16"
+                        MaxDecimalDigitCount="0"
+                        TextFontSize="17"
+                        TextHorizontalAlignment="Start"
+                        ValueChanged="NumericEditWidth_ValueChanged" />
 
-            <dxe:TextEdit 
-                x:Name="TextEditMemberNumber"
-                BoxPadding="18,16"
-                BorderThickness="0.9"
-                ClearIconVisibility="Never"
-                CornerRadius="0"
-                DisabledBorderThickness="0.9"
-                ErrorText=" "
-                FocusedBorderThickness="0.9"
-                HelpText=" "
-                IsErrorIconVisible="False"
-                LabelFontSize="17"
-                LabelText="会员代号"
-                Margin="0,-11,0,-16"
-                TextChanged="TextEditMemberNumber_TextChanged"
-                TextFontSize="17" />
+                    <dxe:NumericEdit 
+                        x:Name="NumericEditHeight"
+                        AllowNullValue="True"
+                        BoxPadding="18,16"
+                        BorderThickness="0.9"
+                        ClearIconVisibility="Never"
+                        CornerRadius="0"
+                        DisabledBorderThickness="0.9"
+                        ErrorText=" "
+                        FocusedBorderThickness="0.9"
+                        Grid.Column="2"
+                        Grid.Row="0"
+                        HelpText=" "
+                        IsErrorIconVisible="False"
+                        LabelFontSize="17"
+                        LabelText="高 CM"
+                        Margin="0,-11,0,-16"
+                        MaxDecimalDigitCount="0"
+                        TextFontSize="17"
+                        TextHorizontalAlignment="Start"
+                        ValueChanged="NumericEditHeight_ValueChanged" />
+                </Grid>
 
-            <Button 
-                x:Name="ButtonSubmit"
-                Clicked="ButtonSubmit_Clicked"
-                HeightRequest="56"
-                Text="立即提交" />
+                <dxe:NumericEdit 
+                    x:Name="NumericEditWeight"
+                    AllowNullValue="True"
+                    BoxPadding="18,16"
+                    BorderThickness="0.9"
+                    ClearIconVisibility="Never"
+                    CornerRadius="0"
+                    DisabledBorderThickness="0.9"
+                    ErrorText=" "
+                    FocusedBorderThickness="0.9"
+                    HelpText=" "
+                    IsErrorIconVisible="False"
+                    LabelFontSize="17"
+                    LabelText="重量 KG"
+                    Margin="0,-11,0,-16"
+                    MaxDecimalDigitCount="2"
+                    TextFontSize="17"
+                    TextHorizontalAlignment="Start"
+                    ValueChanged="NumericEditWeight_ValueChanged" />
 
-        </VerticalStackLayout>
+                <Grid 
+                    ColumnSpacing="24">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
 
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="56" />
+                    </Grid.RowDefinitions>
+
+                    <dxe:TextEdit 
+                        x:Name="TextEditMemberMark"
+                        BoxPadding="18,16"
+                        BorderThickness="0.9"
+                        ClearIconVisibility="Never"
+                        CornerRadius="0"
+                        DisabledBorderThickness="0.9"
+                        ErrorText=" "
+                        FocusedBorderThickness="0.9"
+                        Grid.Column="0"
+                        Grid.Row="0"
+                        HelpText=" "
+                        IsErrorIconVisible="False"
+                        LabelFontSize="17"
+                        LabelText="会员标识"
+                        Margin="0,-11,0,-16"
+                        TextChanged="TextEditMemberMark_TextChanged"
+                        TextFontSize="17" />
+
+                    <dxe:TextEdit 
+                        x:Name="TextEditMemberNumber"
+                        BoxPadding="18,16"
+                        BorderThickness="0.9"
+                        ClearIconVisibility="Never"
+                        CornerRadius="0"
+                        DisabledBorderThickness="0.9"
+                        ErrorText=" "
+                        FocusedBorderThickness="0.9"
+                        Grid.Column="1"
+                        Grid.Row="0"
+                        HelpText=" "
+                        IsErrorIconVisible="False"
+                        LabelFontSize="17"
+                        LabelText="会员代号"
+                        Margin="0,-11,0,-16"
+                        TextChanged="TextEditMemberNumber_TextChanged"
+                        TextFontSize="17" />
+                </Grid>
+
+                <Button 
+                    x:Name="ButtonSubmit"
+                    Clicked="ButtonSubmit_Clicked"
+                    HeightRequest="56"
+                    Text="立即提交" />
+
+            </VerticalStackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
