--- a/DXMauiApp1/Pages/LoginPage.xaml
+++ b/DXMauiApp1/Pages/LoginPage.xaml
@@ -14,8 +14,9 @@
 
             <dxe:TextEdit 
                 x:Name="TextEditAccount"
-                BoxPadding="18,16"
                 BorderThickness="0.9"
+                BoxMinHeight="38"
+                BoxPadding="16,0"
                 ClearIconVisibility="Never"
                 CornerRadius="0"
                 DisabledBorderThickness="0.9"
@@ -23,33 +24,35 @@
                 FocusedBorderThickness="0.9"
                 HelpText=" "
                 IsErrorIconVisible="False"
-                LabelFontSize="17"
-                LabelText="账号"
-                Margin="0,-11,0,-16"
+                LabelText="HHH"
+                Margin="0,-8,0,-16"
                 TextChanged="TextEditAccount_TextChanged"
-                TextFontSize="17" />
+                TextFontSize="16" />
 
             <dxe:PasswordEdit 
                 x:Name="PasswordEditPassword"
-                BoxPadding="18,16"
                 BorderThickness="0.9"
+                BoxMinHeight="38"
+                BoxPadding="16,0"
+                ClearIconVisibility="Never"
                 CornerRadius="0"
                 DisabledBorderThickness="0.9"
                 ErrorText=" "
                 FocusedBorderThickness="0.9"
                 HelpText=" "
                 IsErrorIconVisible="False"
-                LabelFontSize="17"
-                LabelText="密码"
-                Margin="0,-11,0,-16"
+                LabelText="HHH"
+                Margin="0,-8,0,-16"
+                PasswordIconVisibility="Never"
                 TextChanged="PasswordEditPassword_TextChanged"
-                TextFontSize="17" />
+                 TextFontSize="16" />
 
             <Button 
                 x:Name="ButtonLogin"
                 Clicked="ButtonLogin_Clicked"
-                HeightRequest="56"
-                Text="立即登录" />
+                FontSize="16"
+                HeightRequest="38"
+                Text=">>" />
 
         </VerticalStackLayout>
 
