--- a/DXMauiApp1/App.xaml
+++ b/DXMauiApp1/App.xaml
@@ -1,5 +1,6 @@
 ﻿<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:dxe="clr-namespace:DevExpress.Maui.Editors;assembly=DevExpress.Maui.Editors"
              xmlns:windows="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.WindowsSpecific;assembly=Microsoft.Maui.Controls"
              xmlns:local="clr-namespace:DXMauiApp1"
              x:Class= "DXMauiApp1.App">
@@ -9,10 +10,74 @@
             <Style TargetType="Button">
                 <Setter Property="BackgroundColor" Value="Black" />
                 <Setter Property="CornerRadius" Value="0" />
-                <Setter Property="FontSize" Value="14" />
+                <Setter Property="FontSize" Value="16" />
                 <Setter Property="TextColor" Value="White" />
             </Style>
+
+            <Style TargetType="dxe:NumericEdit">
+                <Setter Property="AllowNullValue" Value="True" />
+                <Setter Property="BorderThickness" Value="0.9" />
+                <Setter Property="BoxMinHeight" Value="40" />
+                <Setter Property="BoxPadding" Value="16,9" />
+                <Setter Property="ClearIconVisibility" Value="Never" />
+                <Setter Property="CornerRadius" Value="0" />
+                <Setter Property="DisabledBorderThickness" Value="0.9" />
+                <Setter Property="ErrorText" Value=" " />
+                <Setter Property="FocusedBorderThickness" Value="0.9" />
+                <Setter Property="HelpText" Value=" " />
+                <Setter Property="IsErrorIconVisible" Value="False" />
+                <Setter Property="Margin" Value="0,-8,0,-16" />
+                <Setter Property="MaxDecimalDigitCount" Value="0" />
+                <Setter Property="TextFontSize" Value="16" />
+                <Setter Property="TextHorizontalAlignment" Value="Start" />
+            </Style>
             
+            <Style TargetType="dxe:PasswordEdit">
+                <Setter Property="BorderThickness" Value="0.9" />
+                <Setter Property="BoxMinHeight" Value="40" />
+                <Setter Property="BoxPadding" Value="16,9" />
+                <Setter Property="ClearIconVisibility" Value="Never" />
+                <Setter Property="CornerRadius" Value="0" />
+                <Setter Property="DisabledBorderThickness" Value="0.9" />
+                <Setter Property="ErrorText" Value=" " />
+                <Setter Property="FocusedBorderThickness" Value="0.9" />
+                <Setter Property="HelpText" Value=" " />
+                <Setter Property="IsErrorIconVisible" Value="False" />
+                <Setter Property="Margin" Value="0,-8,0,-16" />
+                <Setter Property="TextFontSize" Value="16" />
+            </Style>
+            
+            <Style TargetType="dxe:TextEdit">
+                <Setter Property="BorderThickness" Value="0.9" />
+                <Setter Property="BoxMinHeight" Value="40" />
+                <Setter Property="BoxPadding" Value="16,9" />
+                <Setter Property="ClearIconVisibility" Value="Never" />
+                <Setter Property="CornerRadius" Value="0" />
+                <Setter Property="DisabledBorderThickness" Value="0.9" />
+                <Setter Property="ErrorText" Value=" " />
+                <Setter Property="FocusedBorderThickness" Value="0.9" />
+                <Setter Property="HelpText" Value=" " />
+                <Setter Property="IsErrorIconVisible" Value="False" />
+                <Setter Property="Margin" Value="0,-8,0,-16" />
+                <Setter Property="TextFontSize" Value="16" />
+            </Style>
+
+            <Style TargetType="dxe:MultilineEdit">
+                <Setter Property="BorderThickness" Value="0.9" />
+                <Setter Property="BoxMinHeight" Value="40" />
+                <Setter Property="BoxPadding" Value="16,9" />
+                <Setter Property="ClearIconVisibility" Value="Never" />
+                <Setter Property="CornerRadius" Value="0" />
+                <Setter Property="DisabledBorderThickness" Value="0.9" />
+                <Setter Property="ErrorText" Value=" " />
+                <Setter Property="FocusedBorderThickness" Value="0.9" />
+                <Setter Property="HelpText" Value=" " />
+                <Setter Property="IsErrorIconVisible" Value="False" />
+                <Setter Property="Margin" Value="0,-8,0,-16" />
+                <Setter Property="MinLineCount" Value="4" />
+                <Setter Property="TextFontSize" Value="16" />
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
