--- a/DXMauiApp1/Pages/EmptyPage.xaml
+++ b/DXMauiApp1/Pages/EmptyPage.xaml
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class= "DXMauiApp1.Pages.EmptyPage"
+             x:Class="DXMauiApp1.Pages.EmptyPage"
              Title="EmptyPage">
-    <ContentPage.Content>
-        <Label
-            Text=" " />
-    </ContentPage.Content>
+    <ScrollView>
+        <VerticalStackLayout
+            Padding="24"
+            Spacing="24">
+
+            <Label Text="Not Implemented" />
+
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
